[package]
name = "cs677-final-project"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/loimabean/cs677-final-project"
description = "Procedural terrain generation & rendering using wgpu for Stevens' CS 677 Parallel Programming for Many-Core Processors"

[profile.release]
strip = true
lto = true
build-override = { opt-level = 3 }

# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O","--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.4"
futures-intrusive = "0.5"
web-time = "1.1"
wgpu = "29.0"
winit = { version = "0.30", features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "29.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
   "Document",
   "Window",
   "Element",
]}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "noise_bench"
harness = false
