[package]
name = "cs677-final-project"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/loimabean/cs677-final-project"
description = "Procedural terrain generation & rendering using wgpu for Stevens' CS 677 Parallel Programming for Many-Core Processors"

[profile.release]
strip = true
lto = true
build-override = { opt-level = 3 }

# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O","--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
futures-intrusive = "0.5"
web-time = "1.1"
wgpu = "29.0"
egui = "0.34.1"
egui-wgpu = "0.34.1"
# egui-winit is split into platform sections below because its default features
# include `clipboard` (arboard) and `wayland`/`x11`, none of which compile on wasm32.
winit = { version = "0.30.13", features = ["android-native-activity"] }

# Native: full egui-winit with clipboard, Wayland, and X11 support.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.34.1"

# WASM: disable default features (clipboard/arboard, wayland, x11 don't exist on wasm32).
[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.34.1", default-features = false }
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "29.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
   "Document",
   "Window",
   "Element",
]}

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "noise_bench"
harness = false
